// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It is a Vue Project 🎉 adds vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  
});
    "
`;

exports[`Vue Project Usage adds VueX and Vue Router to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  store,router
});
    "
`;

exports[`Vue Project Usage adds vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  
});
    "
`;

exports[`Vue Project with Plugins It uses Vue Router adds Vue Router to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  router
});
    "
`;

exports[`Vue Project with Plugins It uses Vue Router and VueX adds VueX and Vue Router to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  store,router
});
    "
`;

exports[`Vue Project with Plugins It uses VueX adds VueX to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  store
});
    "
`;
